@@ -124,6 +124,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   Added also relevant leading icons to show an item 'to send' with emergency
 - Added field MeetingItem.otherMeetingConfigsClonableToPrivacy, that let's user specify if sent item will use
   privacy 'Closed meeting' in the destination configuration
+  Added also relevant leading icons to show what privacy will use the item that will be created in the other MC
 - Added possibility to manually clone an item to another config.  It is now possible to define states in
   which an item may be sent manually and states in which an item will be sent automatically.  Take care that when
   an item is cloned manually, the transitions to tigger on new item will NOT be triggered, this is reserved to
